# dips-ojos-web

./: .dockerignore  .env.enc  .env.example  .gitignore  .sops.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  generate_plots.py  pyproject.toml
backend/: go.mod  go.sum  main.go
backend/db/: sqlite.go
backend/db/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_admin_column.down.sql  002_add_admin_column.up.sql  003_add_transits_table.down.sql  003_add_transits_table.up.sql  004_rename_to_english.down.sql  004_rename_to_english.up.sql  005_remove_filepath.down.sql  005_remove_filepath.up.sql  006_add_bad_model_fit.down.sql  006_add_bad_model_fit.up.sql  007_delete_empty_classifications.down.sql  007_delete_empty_classifications.up.sql
backend/handlers/: admin.go  auth.go  classifications.go  curves.go  transits.go
backend/middleware/: auth.go
backend/models/: classification.go  curve.go  transit.go  user.go
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: app.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AdminPanel.jsx  ClassificationForm.jsx  CurveList.jsx  Login.jsx  StatsPanel.jsx  TransitNavigation.jsx  TransitParameters.jsx  TransitViewer.jsx  (+1 more)
plotter/: Makefile  README.md  generate_plots.py  pyproject.toml
plotter/tests/: conftest.py  test_data_loader.py  test_exporter.py  test_generator.py
plotter/transit_plotter/: data_loader.py  exporter.py  generator.py  plotter.py
transit_plotter/: __init__.py  exporter.py  transit_model.py  types.py
(+10 files in other folders)
