[project]
name = "emoons-web"
version = "0.1.0"
description = "Web application for exoplanet transit light curve classification"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Enrique Díez Alonso", email = "diezenrique@uniovi.es" }]
maintainers = [{ name = "Juan Menéndez Blanco", email = "juanmb@gmail.com" }]
dependencies = [
    "batman-package>=2.5.3",
    "click>=8.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.14.0",
    "setuptools>=75.0.0",
]

[dependency-groups]
dev = ["ruff>=0.12.0", "pytest>=8.0.0", "pytest-cov>=6.0.0"]

[tool.ruff]
line-length = 110

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
